# url-shortener

./: Cargo.toml  docker-compose.yaml
backend/: Dockerfile
backend/url-shortener-lib/: Cargo.toml
backend/url-shortener-lib/src/algorithms/: mod.rs
backend/url-shortener-rest-api/: Cargo.toml  README.md
backend/url-shortener-rest-api/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ResolverForm.tsx  ShortenerForm.tsx
frontend/src/config/: config.ts
url-shortener-lib/: Cargo.toml
url-shortener-lib/src/: lib.rs  manager.rs
url-shortener-lib/src/algorithms/: dummy_shortener.rs  hash_algorithm.rs  mod.rs  utils.rs
url-shortener-rest-api/: Cargo.toml
url-shortener-rest-api/src/: application_state.rs  main.rs  routes.rs
url-shortener-rest-api/src/algorithms_manager/: mod.rs  production_algorithm_manager.rs
url-shortener-rest-api/src/database_helper/: in_memory.rs  mod.rs
