[package]
name = "url-shortener-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# REST API framework
axum = "0.6.20"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# JSON serializer/deserializer
serde_json = { version = "1.0.107" }
serde = { version = "1.0.188", features = ["derive"] }